--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,12 @@
 			"extensions": [
 				"golang.Go",
 				"SantaCodes.santacodes-region-viewer"
-			]
+			],
+			"settings": {
+				"gopls": {
+					"formatting.gofumpt": true
+				}
+			}
 		}
 	}
 }
