--- a/.github/workflows/gofumpt.yml
+++ b/.github/workflows/gofumpt.yml
@@ -17,5 +17,5 @@ jobs:
         ref: ${{ github.head_ref }}
         fetch-depth: 0
 
-    - name: Format code
-      uses: iamnotaturtle/auto-gofmt@v1.0
+- name: auto-gofmt
+  uses: iamnotaturtle/auto-gofmt@v2.1.0
