--- a/.github/workflows/gofumpt.yml
+++ b/.github/workflows/gofumpt.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@main
       with:
         ref: ${{ github.head_ref }}
         fetch-depth: 0
 
     - name: auto-gofmt
-      uses: iamnotaturtle/auto-gofmt@v2.1.0
+      uses: iamnotaturtle/auto-gofmt@master
