--- a/.github/workflows/gofumpt.yml
+++ b/.github/workflows/gofumpt.yml
@@ -12,8 +12,9 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@master
       with:
+        set-safe-directory: '*'
         ref: ${{ github.head_ref }}
         fetch-depth: 0
     - name: Set ownership
