--- a/.github/workflows/gofumpt.yml
+++ b/.github/workflows/gofumpt.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
       with:
         set-safe-directory: '*'
         ref: ${{ github.head_ref }}
